--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.27.3",
     "@prisma/client": "^5.7.0",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
