--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@vercel/speed-insights": "^1.0.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
